--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- General/various strings -->
     <string name="app_name">Xposed 설치 도구</string>
@@ -78,9 +78,9 @@
     <string name="settings_group_download">내려받기</string>
     <string name="settings_enable_downloads">내려받기를 활성화합니다.</string>
     <string name="settings_enable_downloads_summary">Xposed 설치 도구의 내려받기 기능을 활성화합니다.</string>
-    <string name="settings_group_experimental" tools:ignore="UnusedResources">실험적인 기능 들</string>
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">성능에 대한 실험적인 기능 들</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">이를 활성화하면 Xposed 모듈의 속도가 빨라질 수도, 나빠질 수도, 별 변화가 없을 수 있습니다.\n시도해 보고 생긴 달라진 점이나 문제점을 개발자에게 전달해 완성도를 높여줄 수 있습니다./n이를 활성화하거나 비활성화 한 뒤엔 Xposed 프레임워크를 재설치 해야 적용이 됩니다.</string>
+    <string name="settings_group_experimental">실험적인 기능 들</string>
+    <string name="settings_performance_experiment">성능에 대한 실험적인 기능 들</string>
+    <string name="settings_performance_experiment_summary">이를 활성화하면 Xposed 모듈의 속도가 빨라질 수도, 나빠질 수도, 별 변화가 없을 수 있습니다.\n시도해 보고 생긴 달라진 점이나 문제점을 개발자에게 전달해 완성도를 높여줄 수 있습니다./n이를 활성화하거나 비활성화 한 뒤엔 Xposed 프레임워크를 재설치 해야 적용이 됩니다.</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">내역을 읽을 수 없습니다 : </string>
