--- a/res/values-pt-rBR/strings.xml
+++ b/res/values-pt-rBR/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- General/various strings -->
     <string name="app_name">Instalador do Xposed</string>
@@ -57,7 +57,7 @@
     <string name="changes">Novidades:</string>
     <string name="branch_display">(%s marca)</string>
     <string name="download_author">por %s</string>
-    <string name="download_unknown_author" tools:ignore="Typos">autor desconhecido</string>
+    <string name="download_unknown_author">autor desconhecido</string>
     <string name="download_status_installed">Instalado (versão %s)</string>
     <string name="download_status_update_available">Atualização disponível (versão %1$s \u2192 %2$s)</string>
     <string name="download_timestamps">Adicionado em %1$s \u00b7 Atualizado em %2$s</string>
