--- a/res/values-sv/strings.xml
+++ b/res/values-sv/strings.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources>
 
     <!-- General/various strings -->
     <string name="app_name">Xposed Installer</string>
@@ -78,9 +78,9 @@
     <string name="settings_group_download">Ladda ner</string>
     <string name="settings_enable_downloads">Aktivera nedladdningar</string>
     <string name="settings_enable_downloads_summary">Låt Xposed Installer att söka efter uppdateringar och nya moduler</string>
-    <string name="settings_group_experimental" tools:ignore="UnusedResources">Experimentellt</string>
-    <string name="settings_performance_experiment" tools:ignore="UnusedResources">Prestanda experiment</string>
-    <string name="settings_performance_experiment_summary" tools:ignore="UnusedResources">Om du aktiverar det här, kan systemets prestanda antingen öka, minska eller förbli densamma. Känn dig fri att prova och rapportera tillbaka vilken effekt du ser (eller om det finns ingen alls). Du måste installera om ramverket och starta om efter att ha ändrat detta.</string>
+    <string name="settings_group_experimental">Experimentellt</string>
+    <string name="settings_performance_experiment">Prestanda experiment</string>
+    <string name="settings_performance_experiment_summary">Om du aktiverar det här, kan systemets prestanda antingen öka, minska eller förbli densamma. Känn dig fri att prova och rapportera tillbaka vilken effekt du ser (eller om det finns ingen alls). Du måste installera om ramverket och starta om efter att ha ändrat detta.</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">Kunde inte läsa loggen:</string>
