--- a/res/values-ja/strings.xml
+++ b/res/values-ja/strings.xml
@@ -127,6 +127,11 @@
     <string name="logs_load_failed">ログを読み込めません:</string>
     <string name="logs_save_failed">SDカードにログを書き込めません:</string>
     <string name="sdcard_not_writable">SDカードが無いか書き込み可能でありません。</string>
+    <string name="log_too_large">ログファイルが%1$,d kB以上であるため先頭%2$,d kBをスキップしました。</string>
+    <string name="menuClearLog">ログの消去</string>
+    <string name="logs_cleared">ログを消去しました。</string>
+    <string name="logs_clear_failed">ログを消去できませんでした:</string>
+    <string name="log_is_empty">ログはありません</string>
 
     <!-- About tab -->
     <string name="about_developers_label">メイン開発者:</string>
