--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -95,10 +95,10 @@
     <string name="download_timestamps">Toegevoegd op %1$s \u00b7 Bijgewerkt op %2$s</string>
     <string name="download_sorting_title">Sorteervolgorde</string>
     <string name="download_sorting_status">Sorteren op status</string>
-    <string name="download_sorting_updated">Sorteren op laatste update</string>
+    <string name="download_sorting_updated">Sorteren op laatst geüpdatet</string>
     <string name="download_sorting_created">Sorteren op laatst toegevoegd</string>
     <string name="download_section_framework">Framework</string>
-    <string name="download_section_update_available">Update beschikbaar</string>
+    <string name="download_section_update_available">Update(s) beschikbaar</string>
     <string name="download_section_installed">Geïnstalleerd</string>
     <string name="download_section_not_installed">Niet geïnstalleerd</string>
     <string name="download_section_24h">Laatste 24 uur</string>
@@ -140,7 +140,7 @@
     <string name="about_version_label">Versie van deze app:</string>
     <string name="about_source_label">Broncode:</string>
     <string name="about_support_label">Krijg ondersteuning op:</string>
-    <string name="about_support_warning">Deze link is voor de Xposed en het framework <b>alleen</b>! Als u hulp nodig heeft met een module, gebruik hem <b>niet</b>, Contakteer de auteur van de module in de plaats.</string>
+    <string name="about_support_warning">Deze link is voor de Xposed en het framework <b>alleen</b>! Als u hulp nodig heeft met een module, gebruik hem <b>niet</b>, Contacteer de auteur van de module in de plaats.</string>
     <string name="about_libraries_label">Gebruikte bibliotheken:</string>
 
     <!-- DownloadView -->
