--- a/res/values-nl/strings.xml
+++ b/res/values-nl/strings.xml
@@ -140,7 +140,7 @@
     <string name="about_version_label">Versie van deze app:</string>
     <string name="about_source_label">Broncode:</string>
     <string name="about_support_label">Krijg ondersteuning op:</string>
-    <string name="about_support_warning">Deze link is <b>enkel</b> voor deze applicatie en Xposed Framework! Als u hulp nodig heeft met een module, gebruik in dat geval deze optie <b>niet</b>: contacteer de auteur van de betreffende module.</string>
+    <string name="about_support_warning">Deze link is <b>enkel</b> voor deze applicatie en het Xposed Framework! Als u hulp nodig heeft met een module, gebruik in dat geval deze optie <b>niet</b>: contacteer de auteur van de betreffende module.</string>
     <string name="about_libraries_label">Gebruikte bibliotheken:</string>
 
     <!-- DownloadView -->
