--- a/res/values-ca/strings.xml
+++ b/res/values-ca/strings.xml
@@ -10,15 +10,15 @@
     <!-- Welcome screen / main sections -->
     <string name="welcome">Benvingut a <b>Instal·lador Xposed</b>!\nEscull el que vols fer:</string>
     <string name="tabInstall">Framework</string>
-    <string name="tabInstallDescription">Aqui pots gestionar el Xposed Framework, necessari per a que tots els mòduls funcionin.</string>
+    <string name="tabInstallDescription">Aqui pot gestionar el Framework Xposed, que és necessari per a que tots els mòduls funcionin.</string>
     <string name="tabModules">Mòduls</string>
-    <string name="tabModulesDescription">Xposed Framework en si no afegeix cap funcionalitat. Necessitareu mòduls per això. En aquesta secciò pot activar mòduls després d\'haver-los instal·lat.</string>
-    <string name="tabDownload">Descarregues</string>
-    <string name="tabDownloadDescription">Aquesta secciò permet accedir a un repositori de mòduls, per tal que pugui buscar i descarregar els que li agradin i mantenir-los actualitzats.</string>
-    <string name="welcome_framework_update_available">Hi ha una actualització per Xposed Framework disponible (%s).</string>
+    <string name="tabModulesDescription">El Framework Xposed en si no afegeix cap funcionalitat. Necessitareu mòduls per això. En aquesta secció es poden activar mòduls després d\'haver-los instal·lat.</string>
+    <string name="tabDownload">Descàrregues</string>
+    <string name="tabDownloadDescription">Aquesta secció permet accedir a un repositori de mòduls, per tal que pugueu buscar i descarregar els que us agradin i mantenir-los actualitzats.</string>
+    <string name="welcome_framework_update_available">Hi ha una actualització pel Framework Xposed disponible (%s).</string>
     <string name="welcome_update_available">Una o més actualitzacions per els mòduls estan disponibles.</string>
     <string name="tabSettings">Configuració</string>
-    <string name="tabSettingsDescription">Vagi a aquesta secció per configurar l\'instal·lador Xposed i el framework.</string>
+    <string name="tabSettingsDescription">En aquesta secció es pot configurar l\'instal·lador Xposed i el framework.</string>
     <string name="tabLogs">Registres</string>
     <string name="tabLogsDescription">Mostra i desa/envia registres del Xposed framework.</string>
     <string name="tabAbout">Quant a</string>
@@ -35,6 +35,38 @@
     <string name="areyousure">N\'esteu segur?</string>
     <string name="phone_not_compatible">Xposed no és (encara) compatible amb la versió d\'Android SDK %1$d o l\'arquitectura del seu procesador (%2$s).</string>
     <string name="not_tested_but_compatible">Xposed no ha estat provat amb la versió d\'Android SDK %d, però sembla ser compatible. Podeu provar d\'instal·lar-l\'ho si sou aventurers.</string>
+    <string name="reboot_failed">No s\'ha pogut reiniciar. Utilitzeu la funció de reinici del propi dispositiu.</string>
+    <string name="auto_flash_note">%s s\'hauria de flash automàticament un cop apreti "D'acord".</string>
+    <string name="manual_flash_note">Flash %s des de la targeta SD per completar la operació.</string>
+    <string name="reboot_confirmation">Voleu reiniciar ara?</string>
+    <string name="reboot_recovery_confirmation">Voleu reiniciar en mode recovery ara?</string>
+    <string name="install_warning_title">Aneu amb compte!</string>
+    <string name="install_warning">En alguns casos, el vostre dispositiu potser no torna a iniciar-se després d\'instal·lar Xposed.\n\nIf you never heard about \"soft brick\" and \"bootloop\" before or if you don\'t know how to recover from such a situation, do <b>NOT</b> install Xposed!\n\nIn any case, having a recent backup is highly recommended.</string>
+    <string name="dont_show_again">No ho tornis a mostrar</string>
+
+    <!--  File operations -->
+    <string name="root_failed">No s\'ha pogut obtenir accés de superusuari.\n\nComproveu que el dispositiu està ben rootejat i que no heu bloquejat comandes shell.</string>
+    <string name="file_extract_failed">No s\'ha pogut extreure %s</string>
+    <string name="file_mounting_writable">Muntant %s amb permisos d\'escriptura&#8230;</string>
+    <string name="file_mount_writable_failed">No s\'ha pogut muntar %s amb permisos d\'escriptura</string>
+    <string name="file_trying_to_continue">Continuant de totes maneres&#8230;</string>
+    <string name="file_backup_already_exists">Ja existeix una còpia a %s</string>
+    <string name="file_backup_not_found">No s\'ha trobat cap còpia a %s</string>
+    <string name="file_backup_failed">No s\'ha pogut crear una còpia de %s</string>
+    <string name="file_backup_successful">S\'ha creat una còpia a %s</string>
+    <string name="file_backup_restoring">Restaurant la còpia de %s</string>
+    <string name="file_copying">Copiant %s&#8230;</string>
+    <string name="file_copy_failed">No s\'ha pogut copiar %1$s a %2$s</string>
+    <string name="file_move_failed">No s\'ha pogut moure %1$s a %2$s</string>
+    <string name="file_set_perms_failed">No s\'ha pogut definir els permisos per %s</string>
+    <string name="file_set_owner_failed">No s\'ha pogut definir el propietari per %s</string>
+    <string name="file_removing">Eliminant %s&#8230;</string>
+    <string name="file_remove_failed">No s\'ha pogut eliminar %s</string>
+    <string name="file_creating_directory">Creant el directori %s&#8230;</string>
+    <string name="file_create_directory_failed">No s\'ha pogut crear el directori %s</string>
+    <string name="file_writing_recovery_command">Escrivint comanda recovery &#8230;</string>
+    <string name="file_writing_recovery_command_failed">Writing recovery command failed. Please use a different installation method.</string>
+    <string name="file_done">Fet! Els canvis estaran actius després de reiniciar.</string>
 
     <!-- Modules tab -->
     <string name="module_is_not_activated_yet">El mòdul Xposed encara no està actiu</string>
@@ -75,18 +107,30 @@
     <string name="download_section_older">Fa més de 30 dies</string>
 
     <!-- Settings tab -->
+    <string name="settings_group_installation">Instal·lació</string>
+    <string name="settings_install_mode">Mode d\'instal·lació</string>
+    <string name="install_mode_normal">Clàssica (escriu a /system directament)</string>
+    <string name="install_mode_recovery_auto">Recovery (flash zip automatically)</string>
+    <string name="install_mode_recovery_manual">Recovery (copia el zip a la targeta SD, flash manualment)</string>
     <string name="settings_group_download">Descarrega</string>
     <string name="settings_enable_downloads">Activa descàrregues</string>
     <string name="settings_enable_downloads_summary">Permet a l\'instal·lador Xposed comprovar actualitzacions i nous mòduls</string>
     <string name="settings_group_experimental">Experimental</string>
-    <string name="settings_performance_experiment">Performance experiment</string>
+    <string name="settings_disable_resources">Disabled resource hooks</string>
+    <string name="settings_disable_resources_summary">Workaround for conflicts with theming engines\n<b>WARNING:</b> Modules which try to change resources will not work when this is enabled.</string>
+    <string name="settings_performance_experiment">Experiment de rendiment</string>
     <string name="settings_performance_experiment_summary">Si ho activeu, el rendiment del sistema podria augmentar, disminuir o quedar-se igual. No dubteu en provar i informar dels efectes que es noten (o si no n\'hi ha cap en absolut). Cal tornar a instal·lar el framework i reiniciar després de canviar això.</string>
 
     <!--  Logs tab  -->
     <string name="logs_load_failed">No s\'ha pogut llegir el registre:</string>
     <string name="logs_save_failed">No s\'ha pogut escriure el registre a la targeta SD:</string>
     <string name="sdcard_not_writable">No s\'ha trobat la targeta SD o no s\'hi pot escriure</string>
-
+    <string name="log_too_large">El fitxer de registre és més gran de %1$,d kB, s\'han saltat els primers %2$,d kB</string>
+    <string name="menuClearLog">Neteja el registre ara</string>
+    <string name="logs_cleared">Registre net</string>
+    <string name="logs_clear_failed">No s\'ha pogut netejar el registre:</string>
+    <string name="log_is_empty">El registre està buit</string>
+    
     <!-- About tab -->
     <string name="about_developers_label">Desenvolupadors principals:</string>
     <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> i <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
@@ -95,7 +139,7 @@
     <string name="translator">David_Vaz i Albert Samaniego</string>
     <string name="about_version_label">Versió d\'aquesta aplicació:</string>
     <string name="about_source_label">Codi font:</string>
-    <string name="about_support_label">Rep suport a:</string>
+    <string name="about_support_label">Per rebre suport visiti:</string>
     <string name="about_support_warning">Aquest enllaç és <b>només</b> per l\'instal·lador i el framework! Si necessiteu ajuda amb un mòdul, <b>no</b> l\'utilitzieu, contacteu amb l\'autor del mòdul.</string>
     <string name="about_libraries_label">Llibreries utilitzades:</string>
 
