Display translator for Serbian

--- a/res/values-sr/strings.xml
+++ b/res/values-sr/strings.xml
@@ -136,7 +136,7 @@
 <string name="about_developers"><a href="http://forum.xda-developers.com/member.php?u=4419114">rovo89</a> i <a href="http://forum.xda-developers.com/member.php?u=4322181">Tungstwenty</a></string>
 <string name="about_developers_warning">Molim Vas <b>ne</b> kontaktirajte nas direktno za podršku, koristite link ispod.</string>
 <string name="about_translator_label">Prevodilac:</string>
-<string name="translator"></string>
+<string name="translator">maleksa</string>
 <string name="about_version_label">Verzija ove aplikacije:</string>
 <string name="about_source_label">Izvor koda:</string>
 <string name="about_support_label">Podrška:</string>
